# target-imis

./: .gitignore  LICENSE  README.md  meltano.yml  pyproject.toml
sample_payload/: data.singer
target_imis/: __init__.py  auth.py  client.py  exceptions.py  sinks.py  target.py
template/: README.md  config.json
tests/: __init__.py  test_core.py
