[tool.poetry]
name = "target-imis"
version = "0.0.1"
description = "`target-imis` is a Singer target for imis, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["hotglue <hello@hotglue.io>"]
keywords = [
    "ELT",
    "imis",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "<3.12,>=3.7.1"
target-hotglue = "^0.0.7"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.ruff]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
]
select = ["ALL"]
src = ["target_imis"]
target-version = "py37"

[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.isort]
known-first-party = ["target_imis"]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
target-imis = 'target_imis.target:Targetimis.cli'
